# noise-v2

./: .clang-format  .clang-tidy  .clangd  .gitignore  CMakeLIsts.txt  CMakeLists.txt  CMakePresets.json  Containerfile  README.md  Roadmap.md
.github/workflows/: build-nightly.yml  verify-build.yml
cmake/analyze/: ClangTidy.cmake
cmake/compiler/: Cache.cmake  Flags.cmake  Linker.cmake
cmake/docs/: Doxygen.cmake
cmake/emulator/: Qemu.cmake
cmake/format/: ClangFormat.cmake
cmake/misc/: AddSource.cmake  CheckAndApplyFlags.cmake  IsoBuilder.cmake  PreventInSourceBuilds.cmake  ProjectOptions.cmake  Utils.cmake
cmake/toolchains/: x86_64-clang.cmake  x86_64-gcc.cmake
kernel/: CMakeLists.txt
kernel/include/arch/x86_64/: arch.hpp
kernel/include/arch/x86_64/cpu/: cpu.hpp  exception.hpp  features.hpp  gdt.hpp  idt.hpp  registers.hpp  regs.h  simd.hpp
kernel/include/arch/x86_64/hal/: apic.hpp  hpet.hpp  interrupt.hpp  io.hpp  ioapic.hpp  lapic.hpp  pic.hpp  pit.hpp  uart.hpp
kernel/include/arch/x86_64/hal/handlers/: df.hpp
kernel/include/arch/x86_64/memory/: paging.hpp
kernel/include/arch/x86_64/sched/: thread.hpp
kernel/include/boot/: boot.h  limine.h
kernel/include/hal/: acpi.hpp  cpu.hpp  mmio.hpp  pit.hpp  smp_manager.hpp  timer.hpp
kernel/include/hal/interface/: interrupt.hpp  uart.hpp
kernel/include/libs/: deque.hpp  elf.h  intrusive_list.hpp  log.hpp  math.hpp  min_heap.hpp  mutex.hpp  spinlock.hpp  vector.hpp
kernel/include/memory/: cow.hpp  heap.hpp  memory.hpp  pagemap.hpp  pcid_manager.hpp  pmm.hpp  user_address_space.hpp  vma.hpp  vmm.hpp
kernel/include/sched/: process.hpp
kernel/include/task/: ipc.hpp  process.hpp  scheduler.hpp
kernel/src/: kernel.cpp  main.c
kernel/src/__support/: alloc.cpp  cxa.cpp  stdio.cpp  uacpi.cpp
kernel/src/arch/x86_64/: arch.cpp
kernel/src/arch/x86_64/__support/: uacpi.cpp
kernel/src/arch/x86_64/boot/: boot.S
kernel/src/arch/x86_64/cpu/: exception.cpp  features.cpp  gdt.S  gdt.cpp  idt.S  idt.cpp  registers.cpp  simd.cpp
kernel/src/arch/x86_64/hal/: acpi.cpp  cpu.cpp  hpet.cpp  interrupt.cpp  ioapic.cpp  lapic.cpp  pic.cpp  pit.cpp  smp.cpp  timer.cpp  uart.cpp
kernel/src/arch/x86_64/hal/handlers/: df.cpp
kernel/src/arch/x86_64/hal/internal/: hpet.h  ioapic.h  lapic.h  pit.h  uart.h
kernel/src/arch/x86_64/memory/: paging.cpp  pcid_manager.cpp  user_address_space.cpp
kernel/src/arch/x86_64/syscalls/: entry.S  syscalls.cpp
kernel/src/arch/x86_64/task/: process.cpp  scheduler.cpp  switch.S
kernel/src/boot/: boot.c
kernel/src/hal/: acpi.cpp  cpu.cpp  mmio.cpp  smp.cpp  timer_manager.cpp
kernel/src/libs/: log.cpp  mutex.cpp
kernel/src/memory/: cow.cpp  heap.cpp  memory.cpp  pcid_manager.cpp  pmm.cpp  user_address_space.cpp  vma.cpp  vmm.cpp
kernel/src/task/: ipc.cpp  process.cpp  scheduler.cpp
klibc/: CMakeLists.txt
misc/docs/: header.html
misc/limine/: CMakeLists.txt  limine.conf
misc/linker/: x86_64-userland.ld  x86_64.ld
misc/scripts/: gen_time_quanta.py
userland/: CMakeLists.txt
userland/src/: init.c
